feat: exercícios de classificação de jogadores e análise de overall por país do exercício 2

--- a/Atividade01 - Pyspark/Atividade1_Pyspark.ipynb
+++ b/Atividade01 - Pyspark/Atividade1_Pyspark.ipynb
@@ -693,7 +693,7 @@
    "outputs": [],
    "source": [
     "# Observe os valores unicos da coluna Type_1 para os Pokémons com mais de 100 de velocidade\n",
-    "pkmn.filter(pkmn[\"Speed\"] > 100).select(\"Type_1\").distinct().display()"
+    "pkmn.filter(pkmn[\"Speed\"] > 100).select(\"Type 1\").distinct().display()"
    ]
   },
   {
@@ -718,8 +718,8 @@
    "source": [
     "# Vamos alterar os casos onde Speed é superior a 100 para Fire\n",
     "pkmn = pkmn.withColumn(\n",
-    "    \"Type_1\",\n",
-    "    F.when(pkmn[\"Speed\"] > 100, \"Fire\").otherwise(pkmn[\"Type_1\"])\n",
+    "    \"Type 1\",\n",
+    "    F.when(pkmn[\"Speed\"] > 100, \"Fire\").otherwise(pkmn[\"Type 1\"])\n",
     ")"
    ]
   },
@@ -743,7 +743,7 @@
    "outputs": [],
    "source": [
     "# Observe como os valores mudaram\n",
-    "pkmn.filter(pkmn[\"Speed\"] > 100).select(\"Type_1\").distinct().display()"
+    "pkmn.filter(pkmn[\"Speed\"] > 100).select(\"Type 1\").distinct().display()"
    ]
   },
   {
@@ -942,7 +942,7 @@
    },
    "outputs": [],
    "source": [
-    "country_avg_overall = ____\n",
+    "country_avg_overall = fut_players.groupby(\"nationality\").agg( F.avg(\"overall\").alias(\"avg_overall\") )\n",
     "\n",
     "# Retornar a nacionalidade com maior overall médio e o overall médio do brasil\n",
     "melhor = (\n",
@@ -1029,9 +1029,16 @@
     "\"\"\"\n",
     "# Dica utilize as clasulas when e otherwise\n",
     "fut_players = (fut_players\n",
-    "               .select('id', 'overall')\n",
-    "               .withColumn('classification', ____)\n",
+    "               .select('player_id', 'overall')\n",
+    "               .withColumn('classification',\n",
+    "                   F.when(F.col(\"overall\") <= 50, \"Amador\")\n",
+    "                   .when((F.col(\"overall\") >= 51) & (F.col(\"overall\") <= 60), \"Ruim\")\n",
+    "                    .when((F.col(\"overall\") >= 61) & (F.col(\"overall\") <= 70), \"Ok\")\n",
+    "                    .when((F.col(\"overall\") >= 71) & (F.col(\"overall\") <= 80), \"Bom\")\n",
+    "                    .when((F.col(\"overall\") >= 81) & (F.col(\"overall\") <= 90), \"Ótimo\")\n",
+    "                    .otherwise(\"Lenda\")\n",
     "               )\n",
+    "              )\n",
     "\n",
     "# Contar quantos jogadores há em cada classificação\n",
     "fut_players.groupBy(\"classification\").count().orderBy(\"count\", ascending=False).display()"
