feat: desafio Montando o Time dos Sonhos do Brasil com formação 4-4-2

--- a/Atividade01 - Pyspark/Atividade1_Pyspark.ipynb
+++ b/Atividade01 - Pyspark/Atividade1_Pyspark.ipynb
@@ -1100,7 +1100,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "4beab227-2f86-4554-b24f-e3ebabbfcce7",
      "showTitle": false,
@@ -1114,7 +1117,49 @@
     "########## Construa sua Query Aqui ##########\n",
     "#############################################\n",
     "\n",
-    "# Realize novamente o import da base"
+    "# Realize novamente o import da base\n",
+    "from pyspark.sql import functions as F\n",
+    "from pyspark.sql.window import Window\n",
+    "\n",
+    "fut_players = spark.table(\"workspace.default.fut_players_data\")\n",
+    "\n",
+    "players_with_groups = (\n",
+    "    fut_players\n",
+    "        .filter(F.col(\"nationality\") == \"Brazil\") \n",
+    "        .withColumn(\"position_group\",              \n",
+    "            F.when(F.col(\"position\") == \"GK\", \"Goleiro\")\n",
+    "             .when(F.col(\"position\").isin(\"RB\", \"RWB\", \"CB\", \"LB\", \"LWB\"), \"Defesa\")\n",
+    "             .when(F.col(\"position\").isin(\"CM\", \"CDM\", \"CAM\", \"LM\", \"RM\"), \"Meio\")   \n",
+    "             .when(F.col(\"position\").isin(\"ST\", \"CF\", \"LW\", \"RW\", \"LF\", \"RF\"), \"Ataque\")\n",
+    "             .otherwise(\"Excluir\") #Marcando os que não pertecem as categorias de cima pra poder excluií-las depois, já que não\n",
+    "             #vão fazer parte do time (otimização)\n",
+    "        )\n",
+    "        .filter(F.col(\"position_group\") != \"Excluir\")\n",
+    "        )\n",
+    "\n",
+    "#Separando os jogadores por grupo\n",
+    "window_spec = Window.partitionBy(\"position_group\") \\\n",
+    "                    .orderBy(F.col(\"overall\").desc()) #E ordenando de melhor pra pior\n",
+    "\n",
+    "#Criei a coluna rank pra cada jogador dentro do seu grupo\n",
+    "ranked_players = (\n",
+    "    players_with_groups\n",
+    "        .withColumn(\"rank\", F.row_number().over(window_spec))\n",
+    ")\n",
+    "\n",
+    "dream_team_brasil = (\n",
+    "    ranked_players\n",
+    "        .filter(\n",
+    "            (F.col(\"position_group\") == \"Goleiro\") & (F.col(\"rank\") == 1) |\n",
+    "            (F.col(\"position_group\") == \"Defesa\") & (F.col(\"rank\") <= 4) |\n",
+    "            (F.col(\"position_group\") == \"Meio\") & (F.col(\"rank\") <= 4) |\n",
+    "            (F.col(\"position_group\") == \"Ataque\") & (F.col(\"rank\") <= 2)\n",
+    "        )\n",
+    "    \n",
+    "        .select(\"nationality\", \"position_group\", \"player_name\", \"overall\")\n",
+    ")\n",
+    "\n",
+    "display(dream_team_brasil)"
    ]
   },
   {
@@ -1151,7 +1196,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1f7b4203-7d49-4235-8007-f52fd91d85ae",
      "showTitle": false,
