feat: desafio Dream Team com formação 4-4-2 com desduplicação de jogadores

--- a/Atividade01 - Pyspark/Atividade1_Pyspark.ipynb
+++ b/Atividade01 - Pyspark/Atividade1_Pyspark.ipynb
@@ -1211,7 +1211,52 @@
    "source": [
     "#############################################\n",
     "########## Construa sua Query Aqui ##########\n",
-    "#############################################"
+    "#############################################\n",
+    "\n",
+    "brazil_players = fut_players.filter(F.col(\"nationality\") == \"Brazil\")\n",
+    "\n",
+    "player_window = Window.partitionBy(\"player_name\") \\\n",
+    "                      .orderBy(F.col(\"overall\").desc())\n",
+    "\n",
+    "best_cards_only1 = (\n",
+    "    brazil_players\n",
+    "        .withColumn(\"player_rank\", F.row_number().over(player_window))\n",
+    "        .filter(F.col(\"player_rank\") == 1) #essa parte que faz jogadores como o neymar não se repetirem\n",
+    ")\n",
+    "\n",
+    "players_with_groups = (\n",
+    "    best_cards_only1\n",
+    "        .withColumn(\"position_group\",\n",
+    "            F.when(F.col(\"position\") == \"GK\", \"Goleiro\")\n",
+    "             .when(F.col(\"position\").isin(\"RB\", \"RWB\", \"CB\", \"LB\", \"LWB\"), \"Defesa\")\n",
+    "             .when(F.col(\"position\").isin(\"CDM\", \"CM\", \"RM\", \"LM\", \"CAM\"), \"Meio\")\n",
+    "             .when(F.col(\"position\").isin(\"CF\", \"RF\", \"LF\", \"RW\", \"LW\", \"ST\"), \"Ataque\")\n",
+    "             .otherwise(\"Excluir\")\n",
+    "        )\n",
+    "        .filter(F.col(\"position_group\") != \"Excluir\")\n",
+    ")\n",
+    "\n",
+    "position_window = Window.partitionBy(\"position_group\") \\\n",
+    "                        .orderBy(F.col(\"overall\").desc())\n",
+    "\n",
+    "ranked_players = (\n",
+    "    players_with_groups\n",
+    "        .withColumn(\"position_rank\", F.row_number().over(position_window))\n",
+    ")\n",
+    "\n",
+    "dream_team_brasil_unicos = (\n",
+    "    ranked_players\n",
+    "        .filter(\n",
+    "            (F.col(\"position_group\") == \"Goleiro\") & (F.col(\"position_rank\") == 1) |\n",
+    "            (F.col(\"position_group\") == \"Defesa\") & (F.col(\"position_rank\") <= 4) |\n",
+    "            (F.col(\"position_group\") == \"Meio\") & (F.col(\"position_rank\") <= 4) |\n",
+    "            (F.col(\"position_group\") == \"Ataque\") & (F.col(\"position_rank\") <= 2)\n",
+    "        )\n",
+    "        .select(\"nationality\", \"position_group\", \"player_name\", \"overall\")\n",
+    "        .orderBy(\"position_group\", F.col(\"overall\").desc())\n",
+    ")\n",
+    "\n",
+    "display(dream_team_brasil_unicos)"
    ]
   },
   {
