refactor: renomeando window_spec para window_specification por clareza

--- a/Atividade01 - Pyspark/Atividade1_Pyspark.ipynb
+++ b/Atividade01 - Pyspark/Atividade1_Pyspark.ipynb
@@ -1138,13 +1138,13 @@
     "        )\n",
     "\n",
     "#Separando os jogadores por grupo\n",
-    "window_spec = Window.partitionBy(\"position_group\") \\\n",
+    "window_specification = Window.partitionBy(\"position_group\") \\\n",
     "                    .orderBy(F.col(\"overall\").desc()) #E ordenando de melhor pra pior\n",
     "\n",
     "#Criei a coluna rank pra cada jogador dentro do seu grupo\n",
     "ranked_players = (\n",
     "    players_with_groups\n",
-    "        .withColumn(\"rank\", F.row_number().over(window_spec))\n",
+    "        .withColumn(\"rank\", F.row_number().over(window_specification))\n",
     ")\n",
     "\n",
     "dream_team_brasil = (\n",
