feat: Extrair a cotação do dólar via API do Banco Central e salvar na tabela bronze.dm_cotacao_dolar

--- a/Atividade02 - Arquitetura Medalhão/01_land_to_bronze.ipynb
+++ b/Atividade02 - Arquitetura Medalhão/01_land_to_bronze.ipynb
@@ -298,6 +298,135 @@
     "\n",
     "print(\"\\nVerificação concluída\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "471fc488-87d4-482a-8334-7041e0983ac1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Definindo a função de ingestão da API\n",
+    "\n",
+    "def ingest_cotacao_dolar_to_bronze(data_inicio, data_fim, catalogo_destino, schema_destino):\n",
+    "    \n",
+    "    api_url = f\"https://olinda.bcb.gov.br/olinda/servico/PTAX/versao/v1/odata/CotacaoDolarPeriodo(dataInicial=@dataInicial,dataFinalCotacao=@dataFinalCotacao)?@dataInicial='{data_inicio}'&@dataFinalCotacao='{data_fim}'&$select=dataHoraCotacao,cotacaoCompra&$format=json\"\n",
+    "    target_table_name_api = \"dm_cotacao_dolar\"\n",
+    "    full_target_table_name_api = f\"{catalogo_destino}.{schema_destino}.{target_table_name_api}\"\n",
+    "\n",
+    "    print(f\"Buscando cotações de {data_inicio} até {data_fim} ... \", end=\"\")\n",
+    "    \n",
+    "    try:\n",
+    "        #EXTRAIR\n",
+    "        response = requests.get(api_url)\n",
+    "        response.raise_for_status() #Gera erro se a requisição falhar\n",
+    "        data = response.json()\n",
+    "        \n",
+    "        #TRANSFORMAR\n",
+    "        df_pandas = pd.DataFrame(data['value'])\n",
+    "        \n",
+    "        if df_pandas.empty:\n",
+    "            print(f\"FALHA. Nenhum dado retornado pela API para o período.\")\n",
+    "            return \n",
+    "\n",
+    "        df_spark = spark.createDataFrame(df_pandas)\n",
+    "        df_spark_with_timestamp = df_spark.withColumn(\"ingestion_timestamp\", F.current_timestamp())\n",
+    "        \n",
+    "        #CARREGAR\n",
+    "        (\n",
+    "            df_spark_with_timestamp.write\n",
+    "            .mode(\"overwrite\")\n",
+    "            .format(\"delta\")\n",
+    "            .saveAsTable(full_target_table_name_api)\n",
+    "        )\n",
+    "        \n",
+    "        print(f\"SUCESSO.\\nTabela {full_target_table_name_api} criada/atualizada.\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"FALHA ao buscar ou processar dados da API. Erro: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8c9f5b7d-882f-471d-9d1e-30e6c851a87c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbutils.widgets.text(\"data_inicio\", \"01-01-2017\", \"Data Inicial (MM-DD-AAAA)\")\n",
+    "dbutils.widgets.text(\"data_fim\", \"12-31-2018\", \"Data Final (MM-DD-AAAA)\")\n",
+    "\n",
+    "#Pegando as datas dos widgets\n",
+    "data_inicio_widget = dbutils.widgets.get(\"data_inicio\")\n",
+    "data_fim_widget = dbutils.widgets.get(\"data_fim\")\n",
+    "\n",
+    "#Chamando a função de ingestão da API\n",
+    "ingest_cotacao_dolar_to_bronze(\n",
+    "    data_inicio=data_inicio_widget, \n",
+    "    data_fim=data_fim_widget, \n",
+    "    catalogo_destino=catalogo,      \n",
+    "    schema_destino=schema_bronze    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c7e135cf-e9a8-4ad4-a162-4e5885d9df35",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Verificação Final\n",
+    "\n",
+    "print(\"Verificando a tabela da API do Dólar...\")\n",
+    "\n",
+    "tabela_api_nome = f\"{catalogo}.{schema_bronze}.dm_cotacao_dolar\"\n",
+    "\n",
+    "try:\n",
+    "    #Lê a tabela Delta\n",
+    "    df_api = spark.read.table(tabela_api_nome)\n",
+    "    \n",
+    "    #Exibe os 5 primeiros registros\n",
+    "    display(df_api.limit(5))\n",
+    "    \n",
+    "    print(f\"SUCESSO: Tabela {tabela_api_nome} encontrada e lida.\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"FALHA ao tentar ler a tabela {tabela_api_nome}. Erro: {str(e)}\")"
+   ]
   }
  ],
  "metadata": {
@@ -312,7 +441,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8462328556001458,
+     "commandId": 8971026639756193,
      "dataframes": [
       "_sqldf"
      ]
@@ -327,7 +456,7 @@
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "12-31-2018",
-      "label": "Data Final (Ex: 2018-12-31 ou 31/12/2018)",
+      "label": "Data Final (MM-DD-AAAA)",
       "name": "data_fim",
       "options": {
        "widgetDisplayType": "Text",
@@ -338,7 +467,7 @@
      "widgetInfo": {
       "widgetType": "text",
       "defaultValue": "12-31-2018",
-      "label": "Data Final (Ex: 2018-12-31 ou 31/12/2018)",
+      "label": "Data Final (MM-DD-AAAA)",
       "name": "data_fim",
       "options": {
        "widgetType": "text",
@@ -353,7 +482,7 @@
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "01-01-2017",
-      "label": "Data Inicial (Ex: 2017-01-01 ou 01/01/2017)",
+      "label": "Data Inicial (MM-DD-AAAA)",
       "name": "data_inicio",
       "options": {
        "widgetDisplayType": "Text",
@@ -364,7 +493,7 @@
      "widgetInfo": {
       "widgetType": "text",
       "defaultValue": "01-01-2017",
-      "label": "Data Inicial (Ex: 2017-01-01 ou 01/01/2017)",
+      "label": "Data Inicial (MM-DD-AAAA)",
       "name": "data_inicio",
       "options": {
        "widgetType": "text",
