chore: remoção de comentários e separação de células por markdown

--- a/Atividade02 - Arquitetura Medalhão/02_bronze_to_silver.ipynb
+++ b/Atividade02 - Arquitetura Medalhão/02_bronze_to_silver.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2c73614d-3059-462a-917e-4b90686aeace",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# 1. Setup inicial"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -122,6 +138,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "702d725a-9bba-401d-83fb-09cfc6e2d357",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## 2. Processamento Tabela a Tabela"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2e9716a9-08d6-4a05-b124-943406cf2553",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Tabela: ft_consumidores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -176,6 +224,22 @@
     "#VERIFICAR\n",
     "print(\"Exibindo 5 linhas da tabela Silver criada:\")\n",
     "display(df_silver.limit(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e7223148-6433-498b-8267-ca4275820ded",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Tabela: ft_pedidos"
    ]
   },
   {
@@ -333,6 +397,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f324ebe4-8fc8-4188-ac17-fc54b047ee8c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Tabela: ft_itens_pedidos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -441,6 +521,22 @@
     ")\n",
     "\n",
     "print(f\"SUCESSO: Tabela 'silver.{silver_table_name}' criada/atualizada.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "283cf288-a7ac-4461-9471-8bb956016140",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Tabela: ft_pagamentos_pedidos"
    ]
   },
   {
@@ -560,6 +656,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "437ff145-570d-4399-8a6e-5009b40694e4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Tabela: ft_produtos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -665,6 +777,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "936d45cf-25ee-4ac5-82da-42e9d27ee934",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Tabela: ft_vendedores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -682,19 +810,17 @@
    },
    "outputs": [],
    "source": [
-    "# --- 7. Processamento da tabela ft_vendedores ---\n",
+    "#tabela ft_vendedores\n",
     "\n",
-    "# Define os nomes dos schemas e tabelas\n",
     "bronze_schema_name = \"bronze\"\n",
     "bronze_table_path = f\"{bronze_schema_name}.ft_vendedores\"\n",
-    "silver_table_name = \"ft_vendedores\" # Conforme a imagem\n",
+    "silver_table_name = \"ft_vendedores\"\n",
     "\n",
     "print(f\"Processando: {bronze_table_path} -> silver.{silver_table_name}\")\n",
     "\n",
-    "# 1. EXTRAIR (Ler da Bronze)\n",
+    "#EXTRAIR\n",
     "df_vendedores_bronze = spark.read.table(bronze_table_path)\n",
     "\n",
-    "# Exibe uma amostra dos dados brutos\n",
     "print(\"Schema e amostra dos dados da Bronze:\")\n",
     "df_vendedores_bronze.printSchema()\n",
     "display(df_vendedores_bronze.limit(5))"
@@ -718,32 +844,24 @@
    },
    "outputs": [],
    "source": [
-    "# --- 7a. ft_vendedores: Lógica de Transformação ---\n",
-    "\n",
     "print(\"Aplicando transformações...\")\n",
     "\n",
     "df_vendedores_silver = (\n",
     "    df_vendedores_bronze\n",
     "    .select(\n",
-    "        # 1. Renomeia\n",
     "        F.col(\"seller_id\").alias(\"id_vendedor\"),\n",
     "        \n",
-    "        # 2. Renomeia e aplica tipagem (Integer)\n",
     "        F.col(\"seller_zip_code_prefix\").cast(IntegerType()).alias(\"prefixo_cep\"),\n",
     "        \n",
-    "        # 3. Renomeia e converte para maiúsculas\n",
     "        F.upper(F.col(\"seller_city\")).alias(\"cidade\"),\n",
     "        \n",
-    "        # 4. Renomeia e converte para maiúsculas\n",
     "        F.upper(F.col(\"seller_state\")).alias(\"estado\")\n",
     "    )\n",
-    "    # 5. Remove duplicatas baseado na chave 'id_vendedor'\n",
     "    .dropDuplicates([\"id_vendedor\"])\n",
     ")\n",
     "\n",
     "print(\"Transformações concluídas.\")\n",
     "\n",
-    "# Exibe uma amostra do resultado final\n",
     "print(\"Schema e amostra dos dados da Silver:\")\n",
     "df_vendedores_silver.printSchema()\n",
     "display(df_vendedores_silver.limit(5))"
@@ -767,9 +885,7 @@
    },
    "outputs": [],
    "source": [
-    "# --- 7b. ft_vendedores: Carregamento (Load) ---\n",
-    "\n",
-    "# 4. CARREGAR (Salvar na Silver)\n",
+    "#CARREGAR\n",
     "(\n",
     "    df_vendedores_silver.write\n",
     "    .mode(\"overwrite\")\n",
@@ -779,6 +895,22 @@
     ")\n",
     "\n",
     "print(f\"SUCESSO: Tabela 'silver.{silver_table_name}' criada/atualizada.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "75ad9a89-45e1-4b83-a624-e35e349c242a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Tabela: dm_categoria_produtos_traducao"
    ]
   },
   {
@@ -880,6 +1012,22 @@
     ")\n",
     "\n",
     "print(f\"SUCESSO: Tabela 'silver.{silver_table_name}' criada/atualizada.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3e5b8c80-9050-48f0-8dab-a315cd38f9ed",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Tabela: dm_cotacao_dolar"
    ]
   },
   {
