feat: adição de ft_avaliacoes_pedidos
+ correção no nome de ft_pagamentos

--- a/Atividade02 - Arquitetura Medalhão/02_bronze_to_silver.ipynb
+++ b/Atividade02 - Arquitetura Medalhão/02_bronze_to_silver.ipynb
@@ -529,14 +529,14 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "283cf288-a7ac-4461-9471-8bb956016140",
+     "nuid": "ee2c69e0-5d1e-448f-a0d2-67cd19019e74",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "### Tabela: ft_pagamentos_pedidos"
+    "### Tabela: ft_pagamentos"
    ]
   },
   {
@@ -557,11 +557,11 @@
    },
    "outputs": [],
    "source": [
-    "#tabela ft_pagamentos_pedidos\n",
+    "#tabela ft_pagamentos\n",
     "\n",
     "bronze_schema_name = \"bronze\"\n",
     "bronze_table_path = f\"{bronze_schema_name}.ft_pagamentos_pedidos\"\n",
-    "silver_table_name = \"ft_pagamentos_pedidos\"\n",
+    "silver_table_name = \"ft_pagamentos\"\n",
     "\n",
     "print(f\"Processando: {bronze_table_path} -> silver.{silver_table_name}\")\n",
     "\n",
@@ -646,6 +646,121 @@
     "#CARREGAR\n",
     "(\n",
     "    df_pagamentos_silver.write\n",
+    "    .mode(\"overwrite\")\n",
+    "    .format(\"delta\")\n",
+    "    .option(\"overwriteSchema\", \"true\")\n",
+    "    .saveAsTable(silver_table_name)\n",
+    ")\n",
+    "\n",
+    "print(f\"SUCESSO: Tabela 'silver.{silver_table_name}' criada/atualizada.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "97118058-cda5-4b44-ad74-649ade37f251",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Tabela: ft_avaliacoes_pedidos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1be6611b-23ce-494e-a7f7-f103140b3b60",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "bronze_schema_name = \"bronze\"\n",
+    "bronze_table_path = f\"{bronze_schema_name}.ft_avaliacoes_pedidos\"\n",
+    "silver_table_name = \"ft_avaliacoes_pedidos\"\n",
+    "\n",
+    "print(f\"Processando: {bronze_table_path} -> silver.{silver_table_name}\")\n",
+    "\n",
+    "df_avaliacoes_bronze = spark.read.table(bronze_table_path)\n",
+    "\n",
+    "df_avaliacoes_bronze.printSchema()\n",
+    "display(df_avaliacoes_bronze.limit(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3ed4f0bd-7621-4e47-904e-9e8453102aa7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_avaliacoes_silver = (\n",
+    "    df_avaliacoes_bronze\n",
+    "    .select(\n",
+    "        F.col(\"review_id\").alias(\"id_avaliacao\"),\n",
+    "        F.col(\"order_id\").alias(\"id_pedido\"),\n",
+    "        \n",
+    "        # Usa try_cast para o caso de dados sujos (como '2018-04-01...')\n",
+    "        F.col(\"review_score\").try_cast(IntegerType()).alias(\"avaliacao\"),\n",
+    "        \n",
+    "        F.col(\"review_comment_title\").alias(\"titulo_comentario\"),\n",
+    "        F.col(\"review_comment_message\").alias(\"comentario\"),\n",
+    "        \n",
+    "        # Usa try_cast para o caso de textos misturados com datas\n",
+    "        F.col(\"review_creation_date\").try_cast(TimestampType()).alias(\"data_comentario\"),\n",
+    "        \n",
+    "        # Usa try_cast para o caso de textos misturados com datas (o que causou o erro)\n",
+    "        F.col(\"review_answer_timestamp\").try_cast(TimestampType()).alias(\"data_resposta\")\n",
+    "    )\n",
+    "    .dropDuplicates([\"id_avaliacao\", \"id_pedido\"])\n",
+    ")\n",
+    "\n",
+    "df_avaliacoes_silver.printSchema()\n",
+    "display(df_avaliacoes_silver.limit(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e82acb49-d492-4be0-8849-c82d47ef13f7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    df_avaliacoes_silver.write\n",
     "    .mode(\"overwrite\")\n",
     "    .format(\"delta\")\n",
     "    .option(\"overwriteSchema\", \"true\")\n",
